# bazel-sample

./: .gitignore  BUILD.bazel  Makefile  WORKSPACE  deps.bzl  go.mod
.github/workflows/: ci-pr.yaml
cmd/client/: BUILD.bazel  main.go
cmd/server/: BUILD.bazel  main.go
pkg/uuid/: BUILD.bazel
proto/ping/: BUILD.bazel  ping.proto
