load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_push")

go_library(
    name = "server_lib",
    srcs = ["main.go"],
    importpath = "github.com/cre8ivejp/bazel-sample/cmd/server",
    visibility = ["//visibility:private"],
    deps = ["//pkg/uuid"],
)

go_binary(
    name = "server",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "image",
    embed = [":server_lib"],
    goarch = "amd64",
    goos = "linux",
    visibility = ["//visibility:public"],
)

container_push(
    name = "image_push_github",
    format = "Docker",
    image = ":image",
    registry = "ghcr.io",
    repository = "cre8ivejp/bazel-sample",
    tag = "latest",
)
